<resources>
    <string name="app_name">FileManager</string>
    <string name="rc_ac_file_download_preview">文件预览</string>
    <string name="rc_ac_file_manager_category_title">按分类查找</string>
    <string name="rc_ac_file_manager_category_file">文档</string>
    <string name="rc_ac_file_manager_category_video">视频</string>
    <string name="rc_ac_file_manager_category_audio">音频</string>
    <string name="rc_ac_file_manager_category_picture">其他</string>
    <string name="rc_ac_file_manager_dir_title">按目录查找</string>
    <string name="rc_ac_file_manager_mobile_memory">手机内存</string>
    <string name="rc_ac_file_manager_SD_card">SD卡</string>
    <string name="rc_fr_storage_folder_list_search">搜索</string>
    <string name="rc_fr_storage_folder_list_no_files">无法读取%1$s中的文件</string>
    <string name="rc_ad_folder_files_number">%1$s个文件</string>
    <string name="rc_ad_folder_no_files">空文件夹</string>
    <string name="rc_ad_file_size">大小:%1$s</string>
    <string name="rc_ac_file_download_btn">开始下载</string>
    <string name="rc_ac_file_download_progress_tv">正在下载...(%1$s/%2$s)</string>
    <string name="rc_ac_file_download_open_file_btn">用其他应用打开</string>
    <string name="rc_ac_file_send_preview">发文件</string>
    <string name="rc_ad_send_file_no_select_file">发送</string>
    <string name="rc_ad_send_file_select_file">发送(%1$s/20)</string>
    <string name="rc_fr_no_file_message">还没有%1$s文件</string>
    <string name="rc_fr_loading_file_message">加载中...</string>
    <string name="rc_fr_file_category_title_text">文本</string>
    <string name="rc_fr_file_category_title_video">视频</string>
    <string name="rc_fr_file_category_title_audio">音频</string>
    <string name="rc_fr_file_category_title_other">其他</string>
    <string name="rc_fr_file_category_title_sd">SD卡</string>
    <string name="rc_fr_file_category_title_ram">手机内存</string>
    <string name="rc_ac_file_preview_can_not_open_file">无法打开文件</string>
    <string name="rc_ac_file_preview_begin_download">开始下载</string>
    <string name="rc_ac_file_preview_downloaded">已下载</string>
    <string name="rc_ac_file_preview_download_error">下载失败</string>
    <string name="rc_ac_file_preview_download_cancel">已取消下载</string>
    <string name="rc_ac_file_preview_deleted">文件已过期或已被清理</string>
    <string name="rc_fr_file_list_most_selected_files">您最多只能选择20个文件</string>
</resources>
