<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/rc_ac_ll_go_back"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#0195ff">
        <ImageView
            android:id="@+id/rc_ac_iv_file_manager_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="3dp"
            android:src="@mipmap/rc_ac_file_preview"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="3dp"
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:text="@string/rc_ac_file_send_preview"/>
    </LinearLayout>
    <TextView
        style="@style/rc_ac_file_manager_title"
        android:text="@string/rc_ac_file_manager_category_title" />
    <View
        style="@style/rc_ac_file_manager_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">
        <ImageView
            style="@style/rc_ac_file_manager_image_style"
            android:src="@mipmap/rc_ac_text_file_icon"/>
        <TextView
            android:id="@+id/rc_ac_tv_file_manager_file"
            style="@style/rc_ac_file_manager_style"
            android:text="@string/rc_ac_file_manager_category_file"/>
    </LinearLayout>
    <View
        style="@style/rc_ac_file_manager_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">
        <ImageView
            style="@style/rc_ac_file_manager_image_style"
            android:src="@mipmap/rc_ac_video_file_icon"/>
        <TextView
            android:id="@+id/rc_ac_tv_file_manager_video"
            android:text="@string/rc_ac_file_manager_category_video"
            style="@style/rc_ac_file_manager_style" />
    </LinearLayout>
    <View
        style="@style/rc_ac_file_manager_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">
        <ImageView
            style="@style/rc_ac_file_manager_image_style"
            android:src="@mipmap/rc_ac_audio_file_icon"/>
        <TextView
            android:id="@+id/rc_ac_tv_file_manager_audio"
            android:text="@string/rc_ac_file_manager_category_audio"
            style="@style/rc_ac_file_manager_style" />
    </LinearLayout>
    <View
        style="@style/rc_ac_file_manager_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">
        <ImageView
            style="@style/rc_ac_file_manager_image_style"
            android:src="@mipmap/rc_ac_other_file_icon"/>
        <TextView
            android:id="@+id/rc_ac_tv_file_manager_picture"
            android:text="@string/rc_ac_file_manager_category_picture"
            style="@style/rc_ac_file_manager_style" />
    </LinearLayout>
    <View
        style="@style/rc_ac_file_manager_line"/>
    <TextView
        style="@style/rc_ac_file_manager_title"
        android:text="@string/rc_ac_file_manager_dir_title"/>
    <View
        style="@style/rc_ac_file_manager_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">
        <ImageView
            style="@style/rc_ac_file_manager_image_style"
            android:src="@mipmap/rc_ac_ram_icon"/>
        <TextView
            android:id="@+id/rc_ac_tv_file_manager_mobile_memory"
            android:text="@string/rc_ac_file_manager_mobile_memory"
            style="@style/rc_ac_file_manager_style" />
    </LinearLayout>
    <View
        style="@style/rc_ac_file_manager_line"/>
    <LinearLayout
        android:id="@+id/rc_ac_ll_sd_card"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:visibility="gone">
        <ImageView
            style="@style/rc_ac_file_manager_image_style"
            android:src="@mipmap/rc_ac_sd_card_icon"/>
        <TextView
            android:id="@+id/rc_ac_tv_file_manager_SD_card"
            android:text="@string/rc_ac_file_manager_SD_card"
            style="@style/rc_ac_file_manager_style"
            />
    </LinearLayout>
    <View
        style="@style/rc_ac_file_manager_line"/>
</LinearLayout>
